# personal-strat-pai

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: risk_limits.yaml  strategy.yaml  universe.yaml
docs/: technical-design.md
src/personal_strat_pai/: __init__.py  cli.py  config.py
src/personal_strat_pai/backtest/: __init__.py  costs.py  data.py  engine.py  manifest.py  metrics.py  portfolio.py  reports.py  risk.py  signals.py
src/personal_strat_pai/data/: __init__.py  caching.py  corp_actions.py  databento.py  fred.py  iv_proxy.py  polars_utils.py  quality.py  rates.py  repo.py  store.py  yfinance.py
src/personal_strat_pai/exec/: __init__.py  lease.py
src/personal_strat_pai/infra/: __init__.py
src/personal_strat_pai/infra/oci/: __init__.py  nosql_tables.py  provision.py
src/personal_strat_pai/state/: __init__.py  ledger.py  nosql.py  triplet.py
tests/: conftest.py  test_caching.py  test_cli.py  test_config.py  test_corp_actions.py  test_data_quality.py  test_databento.py  test_fred.py  test_iv_proxy.py  test_polars_lazy_eager.py  test_polars_utils.py  test_rates.py  test_repo.py  test_store.py  test_yfinance.py
tests/backtest/: test_costs.py  test_data.py  test_portfolio.py  test_reconciliation.py  test_risk.py  test_signals.py
tests/exec/: __init__.py  test_lease.py
tests/infra/: __init__.py  test_nosql_tables.py
tests/state/: __init__.py  conftest.py  test_atomicity.py  test_ledger.py  test_nosql.py  test_triplet.py
